--- a/.travis.yml
+++ b/.travis.yml
@@ -91,7 +91,7 @@ deploy:
   # deploy when a new tag is pushed
   on:
     # channel to use to produce the release artifacts
-    condition: $TRAVIS_RUST_VERSION = stable
+    condition: "$TRAVIS_RUST_VERSION == stable && $TARGET == x86_64-unknown-linux-musl"
     tags: true
 
 branches:
